<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="webClint_id" tools:ignore="MissingTranslation">655001977455-5hj5n40odo9g17v4bhu5lt3tbgrcj715.apps.googleusercontent.com</string>

    <string name="app_name">Trailers</string>
    <string name="favorite">Favorite</string>
    <string name="page_title">Page Title</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="search_box">Search here…</string>
    <string name="popular">Popular</string>
    <string name="movie">Movie</string>
    <string name="series">Series</string>
    <string name="movies">Movies</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="top_to_login">Top to login!</string>
    <string name="history">History</string>
    <string name="app_settings">App Settings</string>
    <string name="logout">Logout</string>
    <string name="not_favorite">Not favorite</string>
    <string name="actors">Actors</string>
    <string name="similar">Similar</string>
    <string name="season">Season 1</string>
    <string name="seeAll">See All</string>
    <string name="categories">Generes</string>
    <string name="testing">for dialog</string>
    <string name="decline">Cancel</string>
    <string name="accept">Ok</string>
    <string name="tv">TV</string>
    <string name="all">All</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="systemDefault">System default</string>
    <string name="connected">Connected</string>
    <string name="noConnection">No internet connection</string>
    <string name="notActive">Sorry, something wrong!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="singin">Singin</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="no_result">No Result!</string>
    <string name="rated">Top Rated</string>
    <string name="upComing">Upcoming</string>
    <string name="genres">Genres</string>
    <string name="seeMorePopular">See more  popular movies</string>
    <string name="seeMoreTopRated">See more top rated movies</string>
    <string name="seeMoreTopComing">See more up coming movies</string>
    <string name="now_playing">Now Playing</string>
    <string name="trending">Trending</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>