<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_dark_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_twotone_delete_outline_24"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting"
        android:title="@string/settings" />

    <item
        android:id="@+id/movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/tv"
        android:title="@string/tv" />


</menu>