<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/containerAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_gray"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginStart="8dp"
                android:gravity="start"
                android:text="Sajjadio23\nsajad20862@ggmail.com"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/imgUser"
                app:layout_constraintTop_toTopOf="@+id/imgUser" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_gray"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/containerAccount">

            <ImageView
                android:id="@+id/iconHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_history_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleHistory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/history"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/iconHistory"
                app:layout_constraintStart_toEndOf="@+id/iconHistory"
                app:layout_constraintTop_toTopOf="@+id/iconHistory" />

            <ImageView
                android:id="@+id/moveHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_keyboard_arrow_right_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_gray"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/containerHistory"
            app:layout_constraintTop_toBottomOf="@+id/containerHistory">

            <ImageView
                android:id="@+id/iconFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_favorite_border_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleFavorite"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/favorite"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/moveFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_keyboard_arrow_right_24" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerAppSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shadow_menu_btn"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/containerFavorite"
            app:layout_constraintStart_toStartOf="@+id/containerFavorite"
            app:layout_constraintTop_toBottomOf="@+id/containerFavorite">

            <ImageView
                android:id="@+id/iconAppS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_outline_settings_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleAppS"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/app_settings"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/moveAppS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_keyboard_arrow_right_24"
                app:layout_constraintBottom_toBottomOf="@+id/iconAppS"
                app:layout_constraintEnd_toEndOf="@+id/include"
                app:layout_constraintTop_toTopOf="@+id/iconAppS" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerLogout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shadow_menu_btn"
            android:gravity="start|center_vertical"
            android:orientation="horizontal"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/containerAppSettings"
            app:layout_constraintStart_toStartOf="@+id/containerAppSettings"
            app:layout_constraintTop_toBottomOf="@+id/containerAppSettings">

            <ImageView
                android:id="@+id/iconLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_login_24" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/titleLogOut"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/logout"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/moveLogOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_round_keyboard_arrow_right_24" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>