<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/mainColor"
        android:padding="8dp">

        <TextView
            android:id="@+id/icon_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="———"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/containerSettings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_click_button"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/icon_sheet"
            app:layout_constraintStart_toStartOf="@+id/icon_sheet"
            app:layout_constraintTop_toBottomOf="@+id/icon_sheet">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_settings_24" />

            <TextView
                android:id="@+id/tv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:text="@string/settings"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_sheet" />

        </LinearLayout>

        <View
            android:id="@+id/viewLine1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="?attr/secondColor"
            app:layout_constraintEnd_toEndOf="@+id/containerSettings"
            app:layout_constraintStart_toStartOf="@+id/containerSettings"
            app:layout_constraintTop_toBottomOf="@+id/containerSettings" />


        <LinearLayout
            android:id="@+id/containerMovie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/common_click_button"
            android:layout_marginTop="8dp"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/containerSettings"
            app:layout_constraintStart_toStartOf="@+id/containerSettings"
            app:layout_constraintTop_toBottomOf="@+id/containerSettings">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_outline_movie_filter_24" />

            <TextView
                android:id="@+id/tv_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:text="@string/movie"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_sheet" />

        </LinearLayout>

        <View
            android:id="@+id/viewLine2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginVertical="4dp"
            android:background="?attr/secondColor"
            app:layout_constraintEnd_toEndOf="@+id/containerMovie"
            app:layout_constraintStart_toStartOf="@+id/containerMovie"
            app:layout_constraintTop_toBottomOf="@+id/containerMovie" />

        <LinearLayout
            android:id="@+id/containerTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/common_click_button"
            android:gravity="center|start"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/containerMovie"
            app:layout_constraintStart_toStartOf="@+id/containerMovie"
            app:layout_constraintTop_toBottomOf="@+id/containerMovie">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_round_live_tv_24" />

            <TextView
                android:id="@+id/tv_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:text="@string/tv"
                android:textColor="?attr/textColor"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_sheet" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>